--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap');
+:root {
+  font-family: 'Luxurious Roman', cursive;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color-scheme: light;
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+}
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+a img {
+  width: 30px;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.home-header {
+  background-color: gray;
+  height: 30vh;
+  color : white;
+}
+
+.home-header img {
+  width: 50px;
+  height: 50px;
+}
+
+.nav {
+  font-weight: bold;
+  width: 600px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.nav a {
+  color : white;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.nav a:hover {
+  opacity: 0.8;
 }
